--- a/main/html/index.html
+++ b/main/html/index.html
@@ -10,6 +10,10 @@
     <div class="container">
         <header>
             <h1>ESP32 WiFi Manager</h1>
+            <nav>
+                <a href="/modbus.html" class="btn btn-primary">Device Config</a>
+                <a href="/dashboard.html" class="btn btn-secondary">Dashboard</a>
+            </nav>
             <div class="status-indicator" id="status">
                 <span class="status-dot" id="status-dot"></span>
                 <span class="status-text" id="status-text">Checking...</span>
