--- a/main/html/modbus.html
+++ b/main/html/modbus.html
@@ -207,7 +207,7 @@
                     <span class="close" onclick="closeModal()">&times;</span>
                 </div>
                 <form id="add-register-form">
-                    <input type="hidden" id="register-device-id">
+                    <input type="hidden" id="register-device-id" name="device_id">
                     <div class="form-group">
                         <label for="register-address">Address</label>
                         <input type="number" id="register-address" name="address" required
